--- a/frontend/package.json
+++ b/frontend/package.json
@@ -28,7 +28,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "build": "PUBLIC_URL='/static' react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
