--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "@types/react": "^18.0.15",
     "@types/react-dom": "^18.0.6",
     "@types/react-router-dom": "^5.3.3",
+    "animate.css": "^4.1.1",
     "axios": "^0.27.2",
     "bootstrap": "^5.2.0-beta1",
     "notistack": "^2.0.5",
