--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 asgiref==3.5.0
 beautifulsoup4==4.11.0
-Django==4.0.6
+Django==4.0.3
+django-cors-headers==3.13.0
 django-livereload-server==0.4
 djangorestframework==3.13.1
 gunicorn==20.1.0
