--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "@types/axios": "^0.14.0",
     "@types/jest": "^27.5.2",
     "@types/node": "^16.11.43",
     "@types/react": "^18.0.15",
@@ -18,6 +19,8 @@
     "animate.css": "^4.1.1",
     "axios": "^0.27.2",
     "bootstrap": "^5.2.0-beta1",
+    "mobx": "^6.6.1",
+    "mobx-react-lite": "^3.4.0",
     "notistack": "^2.0.5",
     "react": "^18.2.0",
     "react-bootstrap": "^2.4.0",
