--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,18 @@
 asgiref==3.5.0
+autopep8==1.6.0
 beautifulsoup4==4.11.0
 Django==4.0.6
 django-cors-headers==3.13.0
-django-livereload-server==0.4
 djangorestframework==3.13.1
+djangorestframework-simplejwt==5.2.0
 gunicorn==20.1.0
 psycopg2==2.9.3
+pycodestyle==2.8.0
+PyJWT==2.4.0
 pytz==2022.1
 six==1.16.0
 soupsieve==2.3.2
 sqlparse==0.4.2
+toml==0.10.2
 tornado==6.1
 whitenoise==6.0.0
