--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,6 +19,7 @@
     "animate.css": "^4.1.1",
     "axios": "^0.27.2",
     "bootstrap": "^5.2.0-beta1",
+    "jwt-decode": "^3.1.2",
     "mobx": "^6.6.1",
     "mobx-react-lite": "^3.4.0",
     "notistack": "^2.0.5",
