--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,6 +19,7 @@
     "animate.css": "^4.1.1",
     "axios": "^0.27.2",
     "bootstrap": "^5.2.0-beta1",
+    "formik": "^2.2.9",
     "jwt-decode": "^3.1.2",
     "mobx": "^6.6.1",
     "mobx-react-lite": "^3.4.0",
@@ -30,7 +31,8 @@
     "react-scripts": "5.0.1",
     "sass": "^1.53.0",
     "typescript": "^4.7.4",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "yup": "^0.32.11"
   },
   "scripts": {
     "start": "react-scripts start",
