--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,6 +1,6 @@
 {
-    "name": "react-typescript",
-    "version": "0.1.0",
+    "name": "quicktures",
+    "version": "0.2.0",
     "private": true,
     "dependencies": {
         "@emotion/react": "^11.10.5",
